@@ -2,6 +2,9 @@ module ClientSideValidations::ActiveRecord
   class Middleware
 
     def self.is_unique?(klass, attribute, value, params)
+      column = klass.columns_hash[attribute.to_s]
+      value = column.limit ? value.to_s.mb_chars[0, column.limit] : value.to_s if column.text?
+
       t = klass.arel_table
 
       if params[:case_sensitive] == 'true'
