@@ -9,3 +9,4 @@ ActiveRecord::Base.establish_connection(
 )
 
 require 'active_record/models/user'
+require 'active_record/models/guid'
