@@ -1,5 +1,6 @@
 == 3.0.0.beta.5
   Fixed load order issue with other form builders
+  Better ActiveRecord Uniqueness
 
 == 3.0.0.beta.4
   Fix for lower case \z as Regex terminator
